samples/_failures_safe/1761595527_7b7e7a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cf513530.c: In function ‘main’:
./samples/SAFE/__tmp_cf513530.c:175:5: error: expected expression at end of input
  175 |     int line =
      |     ^~~
./samples/SAFE/__tmp_cf513530.c:175:5: error: expected declaration or statement at end of input
